tabelas da base de dados

--- a/Vets/Vets/Vets.csproj
+++ b/Vets/Vets/Vets.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-Vets-89D08EF3-AE49-47E7-B498-A216BD1FE293</UserSecretsId>
   </PropertyGroup>
